    as colors with respect to the meshColors variable.
  - Some declarations in WebGL made assumptions that were
    not valid on mobile devices.
  - Touch events are now supported in WebGL.
  - Added "snapshot" knitr option to use when autoprinting.
  - Added defaults to snapshot3d(width = NULL, height = NULL).
  - Added as.mesh3d.rglobject method.
  - Added clip_to_density argument to plot3d.lm() method.
  - The "depth_mask" material property was being ignored
    in rglwidget().
  - Added clipObj3d(), contourLines3d() and filledContour3d() functions.
  - Modified clipMesh3d() function to make it more consistent
    with the above three functions.  The main incompatibility
    with the version in 0.100.26 is that only vertex
    coordinates are now passed to the clipping function.

0.103.5:
  - Add merge() method for "mesh3d" objects, and use it in
    filledContour3d().
  - Fixed some memory leaks found by valgrind, and problems seen
    on systems with no functional Asymptote or Pandoc.

0.104.13:
  - Fixed bug in rglwidget() that caused it to fail to display
    text if too many strings were in the same object.
    (Reported by Yohann Demont.)
  - Added --disable-opengl configure option to run entirely without
    OpenGL (to support Apple M1 machines without GLX,
    and others which don't have X11 or OpenGL devel
    files installed).
  - Added explicity typecasts to suppress compile warnings.
  - Restored some of the Windows configuration from pre-0.101.2
    to allow use on older R versions.
  - Dropped use of mathjaxr, which caused issues on Debian.
  - Fixed some small bugs, found by lintr.
  - Fixed bugs in Shiny support, and moved Shiny demo code into
    single files in demo directory.
  - Experimental support for handling mouse selection in Shiny
    added.
  - Fixed bugs in addNormals.mesh3d method, added angleWeighted
    argument, defaulting to TRUE.
  - Fixed bugs in rglwidget() displays of transparent spheres.